--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   demo-app:
     build: .
@@ -6,7 +6,7 @@ services:
       - NODE_ENV=development
     volumes:
       - .:/src
-    command: sh -c 'cd app && yarn start'
+    command: sh -c 'cd app && yarn install && yarn start'
     ports:
-      - "80:80"
+      - "80:3000"
     tty: true
