--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 				"planbcoding.vscode-react-refactor",
 				"esbenp.prettier-vscode",
 				"dbaeumer.vscode-eslint",
-				"jawandarajbir.react-vscode-extension-pack"
+				"jawandarajbir.react-vscode-extension-pack",
+				"oderwat.indent-rainbow"
 			]
 		}
 	}
