--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "prettier": "^2",
     "tailwindcss": "^3.4.3"
   }
 }
